# kufeditor

./: .gitignore  CLAUDE.md  CMakeLists.txt  IMHEX_UI_RECREATION_GUIDE.md  KUFEditor.sln  Makefile  README.md  UI_DESIGN.md  dotnet.sh  imgui.ini  parse_stg.py
.dossier/: cache.db  config.yaml  issues.jsonl
.github/workflows/: ci.yml  release.yml
docs/: FILE_FORMATS.md
docs/file-formats/: SOX_FORMAT.md  STG_FORMAT.md
docs/plans/: 2025-01-27-ui-redesign.md  2026-01-01-mod-manager-design.md  2026-01-01-mod-manager-implementation.md  2026-01-03-kufeditor-design.md  2026-01-03-kufeditor-implementation.md  2026-02-07-stg-editor-design.md
installer/windows/: setup.iss
scripts/: tag.sh
src/: main.cpp
src/KUFEditor/: App.axaml  App.axaml.cs  KUFEditor.csproj  KUFEditorApp.axaml  KUFEditorApp.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
src/KUFEditor.Assets/: SoxFile.cs
src/KUFEditor.Assets/Mission/: MissionData.cs  MissionFile.cs
src/KUFEditor.Assets/Patching/: DiffGeneratorRegistry.cs  SoxPatcherRegistry.cs  TextSoxDiffGenerator.cs  TextSoxPatcher.cs  TroopInfoDiffGenerator.cs  TroopInfoPatcher.cs
src/KUFEditor.Assets/SaveGame/: SaveGameData.cs  SaveGameFile.cs
src/KUFEditor.Assets/TextSox/: TextSoxData.cs  TextSoxFile.cs
src/KUFEditor.Assets/TroopInfo/: LevelUpData.cs  TroopInfo.cs  TroopInfoSox.cs  TroopInfoSoxFile.cs  TroopNames.cs
src/KUFEditor.Core/: BackupManager.cs  KUFEditor.Core.csproj  Settings.cs
src/KUFEditor.Core/FileFormats/: IFileFormat.cs
src/KUFEditor.Core/Files/: FileManager.cs  OpenFile.cs
src/KUFEditor.Core/KeyboardShortcuts/: DefaultShortcuts.cs  ShortcutBinding.cs  ShortcutKey.cs  ShortcutManager.cs
src/KUFEditor.Core/Mods/: IDiffGenerator.cs  ISoxPatcher.cs  Mod.cs  ModApplier.cs  ModConflict.cs  ModManager.cs
src/KUFEditor.Core/RecentFiles/: RecentFilesManager.cs
src/KUFEditor.Core/UndoRedo/: IUndoableCommand.cs  PropertyChangeCommand.cs  UndoRedoManager.cs
src/KUFEditor.Core/Validation/: IFileValidator.cs  SoxFileValidator.cs  TextSoxValidator.cs  ValidationResult.cs  ValidationService.cs
src/KUFEditor.Maps/: KUFEditor.Maps.csproj  Map.cs
src/KUFEditor/Assets/: KUFEditor.icns
src/KUFEditor/UI/: KUFEditor.axaml  KUFEditor.axaml.cs
src/core/: application.cpp  application.h  async_task.h  config.cpp  config.h  document.h  imgui_context.cpp  imgui_context.h  json.cpp  json.h  mod_metadata.h  name_dictionary.cpp  name_dictionary.h  recent_files.cpp  recent_files.h  tab_manager.cpp  tab_manager.h  text_encoding.cpp  text_encoding.h  window.cpp  window.h  zip_archive.cpp  zip_archive.h
src/formats/: file_format.h  sox_binary.cpp  sox_binary.h  sox_encoding.cpp  sox_encoding.h  sox_skill_info.cpp  sox_skill_info.h  sox_text.cpp  sox_text.h  stg_format.cpp  stg_format.h  stg_script_catalog.cpp  stg_script_catalog.h  validation.h
src/mods/: backup_manager.cpp  backup_manager.h  mod_manager.cpp  mod_manager.h
src/ui/: imgui_helpers.h
src/ui/views/: view.h  (+10 more)
src/undo/: command.h  reorder_vector_command.h  set_field_command.h  undo_stack.cpp  undo_stack.h
test/: main_test.cpp  sox_binary_test.cpp  sox_encoding_test.cpp  sox_skill_info_test.cpp  stg_format_test.cpp
tests/KUFEditor.Assets.Tests/: KUFEditor.Assets.Tests.csproj  MissionFileTests.cs  PatchingTests.cs  TextSoxFileTests.cs  TroopInfoSoxFileTests.cs
tests/KUFEditor.Core.Tests/: BackupManagerTests.cs  CommandTests.cs  FileManagerTests.cs  KUFEditor.Core.Tests.csproj  ModTests.cs  RecentFilesTests.cs  SettingsTests.cs  ShortcutManagerTests.cs  UndoRedoManagerTests.cs  ValidationTests.cs
tools/: stg_anchor_parse.py  stg_bruteforce.py  stg_e1140_deep.py  stg_event2_finder.py  stg_event2_finder2.py  stg_event_analyzer.py  stg_event_analyzer2.py  stg_event_debug.py  stg_event_parse3.py  stg_find_descriptions.py  stg_footer_check.py  stg_format_discovery.py  stg_format_finder.py  stg_gap_finder.py  stg_raw_tail_dump.py  stg_string_format.py  stg_trace_events.py
(+47 files in other folders)
